--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,46 +1,46 @@
-<style>
+<div class="container">
+	<div class="row">
+		<div class="col-md-12 text-center" id="top-bar">
+			<img src="/assets/images/burger.png" alt="burger" />
+			<h1> Eat-Da-Burger! </h1>
+		</div>
+		<div class="col-md-6 text-center" class="task">
+			<div class="row">
+			  {{#each burger_data}}
+			  	{{#unless this.devoured}}
+				<div class="col-md-9 text-center">
+					<pre>{{this.id}}. {{this.burger_name}}
+					</pre>
+				  		<!-- {{this.Date}} -->
+				</div>
+				<div class="col-md-3 text-center">
+					<form class="devour-form button-size">
+						<input input type="hidden" class="burger_id" type="text" value={{this.id}}><br>
+						<button type="submit" class="btn btn-default">Devour it!</button>
+					</form>
+				</div>
+				{{/unless}}
+			  {{/each}}
+			</div>
+		</div>
+		<div class="col-md-6 text-center" class="task">
+			  {{#each burger_data}}
+			  	{{#if this.devoured}}
+			  		<input class="form-control" type="text" placeholder="{{this.id}} . {{this.burger_name}}" readonly>
+				{{/if}}
+			  {{/each}}
+		</div>
+	</div>
+</div>
 
-</style>
-
-<h1 class="text-center">Burger!</h1>
-
-<img id="burger-picture" src="assets\img\burger.jpg" width="500">
-<ul class="float-left" id="burgerlist">
-    <h2 class="list-title">Burgers to munch!</h2>
-    {{#each burgers}}
-    {{#unless devoured}}
-    <p>
-        {{this.id}}. {{this.burger_name}}
-
-        <button data-burgerid="{{this.id}}" data-burgerstate="{{this.devoured}}"
-            class="devour-the-burger btn btn-danger">Devour!</button>
-    </p>
-    {{/unless}}
-    {{/each}}
-</ul>
-<ul class="float-right" id=" burgerlist">
-    <h2 class="list-title">Burgers been Devoured</h2>
-    {{#each burgers}}
-    {{#if devoured}}
-    <p>
-        {{this.id}}. {{this.burger_name}}
-
-    </p>
-    {{/if}}
-    {{/each}}
-</ul>
-
-
-
-
-
-
-<h2 class="text-center">Enter a burger you want to eat!</h2>
-<form class="create-form text-center">
-
-    <div class="form-group">
-        <input type="text" id="burger-to-order" name="burger-name">
-    </div>
-
-    <button class="btn btn-primary add-burger" id="submit" type="submit">Submit</button>
-</form>
+<div class="container">
+	<div class="row">
+		<div class="col-md-12 text-center enter_section">
+			<form action="/burgers/create" method="POST">
+				<input type="text" class="form-control" name="burger_name" value="" id="enter_text">
+				<button type="submit" class="btn btn-primary" id="text-enter-button">Submit</button>
+			</form>
+			<p>Enter a burger you want to eat Click the "Submit" button.</p>
+		</div>
+	</div>
+</div>
