--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>Eat-da-burger</title>
-		<meta charset="UTF-8">
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-		<!-- Optional theme -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap-theme.min.css">
-		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
-	</head>
-	<body>
-		{{{ body }}}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Burger</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Righteous&display=swap" rel="stylesheet">
+    <script src="/assets/js/burger_logic.js"></script><link</lin>
+</head>
 
-	{{!-- Add in jQuery --}}
-	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-	<script src="/assets/js/script.js"></script>
-	</body>
+<body>
+    {{{ body }}}
+</body>
+
 </html>
